Fix oidc auth